deployment/kustomize/environments/tst/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentdemo
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: 10m
    #nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/auth-realm: Auth required
    nginx.ingress.kubernetes.io/auth-secret: sysadmins
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - secretName: fluentdemo-tls-tst
      hosts:
        - demo-tst.django-fluent.org
  rules:
    - host: demo-tst.django-fluent.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fluentdemo
                port:
                  number: 80
---
# Extra ingress for paths that should not have auth annotations
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentdemo-authexclude
spec:
  rules:
    - host: demo-tst.django-fluent.org
      http:
        paths:
          - path: /api/health/
            pathType: Prefix
            backend:
              service:
                name: fluentdemo
                port:
                  number: 80
---
# Leverage nginx-ingress cache for /media/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentdemo-media
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: demo-tst.django-fluent.org
      http:
        paths:
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: fluentdemo
                port:
                  number: 80
---
# Leverage nginx-ingress cache for /static/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentdemo-static
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: demo-tst.django-fluent.org
      http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: fluentdemo
                port:
                  number: 80
